--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,17 @@
     border: 1px solid black;
   }
 }
+
+.map
+{
+  width: 500px;
+  aspect-ratio: 1/1;
+  display: grid;
+
+  >div 
+  {
+    border: 1px solid rgba(0,0,0,0.2);
+    width: 100%;
+    aspect-ratio: 1/1;
+  }
+}
